[gd_scene load_steps=15 format=3 uid="uid://lfm3ps837gy5"]

[ext_resource type="Script" path="res://core/ui/card_ui/power/power_menu.gd" id="2_0vc46"]
[ext_resource type="Shader" path="res://assets/shaders/simple_blur.gdshader" id="2_hkifr"]
[ext_resource type="PackedScene" uid="uid://c6fg6uvng0ovi" path="res://core/systems/input/input_watcher.tscn" id="3_1whtm"]
[ext_resource type="PackedScene" uid="uid://b76dvfuouhlwd" path="res://core/systems/state/state_updater.tscn" id="4_4rhfl"]
[ext_resource type="Resource" uid="uid://cadriyl38ny5y" path="res://assets/state/state_machines/popup_state_machine.tres" id="5_kxixy"]
[ext_resource type="Resource" uid="uid://bw0mtk7sso8m2" path="res://assets/state/states/power_menu.tres" id="5_u1rly"]
[ext_resource type="PackedScene" uid="uid://shvyhrv5sx3v" path="res://core/systems/state/state_watcher.tscn" id="6_34b1q"]
[ext_resource type="PackedScene" uid="uid://bw8113ocotx2r" path="res://core/systems/effects/fade_effect.tscn" id="8_xohsw"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="9_vlbso"]
[ext_resource type="Script" path="res://core/systems/input/focus_stack.gd" id="10_6ywv6"]
[ext_resource type="PackedScene" uid="uid://dithv38oqgy58" path="res://core/ui/components/section_label.tscn" id="10_y3iyf"]
[ext_resource type="PackedScene" uid="uid://c71ayw7pcw6u6" path="res://core/ui/components/card_button.tscn" id="12_2pwjc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v0ws8"]
shader = ExtResource("2_hkifr")
shader_parameter/blur_amount = 1.578
shader_parameter/mix_amount = null
shader_parameter/color_over = Color(0, 0, 0, 0)

[sub_resource type="Resource" id="Resource_fafkw"]
script = ExtResource("10_6ywv6")

[node name="PowerMenu" type="Control" groups=["power_menu"]]
z_index = 20
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_0vc46")

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_v0ws8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.666667)

[node name="InputWatcher" parent="." instance=ExtResource("3_1whtm")]
stop_propagation = true
action = "ogui_east"

[node name="StateUpdater" parent="InputWatcher" instance=ExtResource("4_4rhfl")]
state_machine = ExtResource("5_kxixy")
action = 2
on_signal = "input_released"

[node name="StateWatcher" parent="." instance=ExtResource("6_34b1q")]
state = ExtResource("5_u1rly")

[node name="FadeEffect" parent="StateWatcher" node_paths=PackedStringArray("target") instance=ExtResource("8_xohsw")]
target = NodePath("../..")
on_signal = "state_entered"
fade_out_signal = "state_exited"
on_signal = "state_entered"

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PowerMenu"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="FocusGroup" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("9_vlbso")]
unique_name_in_owner = true
focus_stack = SubResource("Resource_fafkw")

[node name="SectionLabel" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_y3iyf")]
layout_mode = 2
text = "Power"
horizontal_alignment = 1

[node name="SuspendButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("12_2pwjc")]
unique_name_in_owner = true
layout_mode = 2
text = "Suspend"
click_focuses = false

[node name="RebootButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("12_2pwjc")]
unique_name_in_owner = true
layout_mode = 2
text = "Reboot"
click_focuses = false

[node name="ShutdownButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("12_2pwjc")]
unique_name_in_owner = true
layout_mode = 2
text = "Shutdown"
click_focuses = false

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExitButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("12_2pwjc")]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"
click_focuses = false

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("12_2pwjc")]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"
click_focuses = false
